--- a/kubernetes/apps/kubeflow/kustomization.yaml
+++ b/kubernetes/apps/kubeflow/kustomization.yaml
@@ -34,104 +34,107 @@ sortOptions:
     orderLast:
     - ValidatingWebhookConfiguration
 
+bases:
+  - github.com/kubeflow/manifests/?ref=v1.9.1
+
 resources:
 # Cert-Manager
 # renovate: datasource=github-releases depName=kubeflow/manifests
-- https://raw.githubusercontent.com/kubeflow/manifests/v1.9.1/common/cert-manager/kubeflow-issuer/base
+- common/cert-manager/kubeflow-issuer/base
 # Istio
 # renovate: datasource=github-releases depName=kubeflow/manifests
-- https://raw.githubusercontent.com/kubeflow/manifests/v1.9.1/common/istio-1-22/istio-crds/base
+- common/istio-1-22/istio-crds/base
 # renovate: datasource=github-releases depName=kubeflow/manifests
-- https://raw.githubusercontent.com/kubeflow/manifests/v1.9.1/common/istio-1-22/istio-namespace/base
+- common/istio-1-22/istio-namespace/base
 # renovate: datasource=github-releases depName=kubeflow/manifests
-- https://raw.githubusercontent.com/kubeflow/manifests/v1.9.1/common/istio-1-22/istio-install/overlays/oauth2-proxy
+- common/istio-1-22/istio-install/overlays/oauth2-proxy
 # oauth2-proxy
 # renovate: datasource=github-releases depName=kubeflow/manifests
-- https://raw.githubusercontent.com/kubeflow/manifests/v1.9.1/common/oauth2-proxy/overlays/m2m-dex-only
+- common/oauth2-proxy/overlays/m2m-dex-only
 
 # Dex
 # renovate: datasource=github-releases depName=kubeflow/manifests
-- https://raw.githubusercontent.com/kubeflow/manifests/v1.9.1/common/dex/overlays/oauth2-proxy
+- common/dex/overlays/oauth2-proxy
 # KNative
 # renovate: datasource=github-releases depName=kubeflow/manifests
-- https://raw.githubusercontent.com/kubeflow/manifests/v1.9.1/common/knative/knative-serving/overlays/gateways
+- common/knative/knative-serving/overlays/gateways
 # renovate: datasource=github-releases depName=kubeflow/manifests
-- https://raw.githubusercontent.com/kubeflow/manifests/v1.9.1/common/istio-1-22/cluster-local-gateway/base
+- common/istio-1-22/cluster-local-gateway/base
 # Kubeflow namespace
 # renovate: datasource=github-releases depName=kubeflow/manifests
-- https://raw.githubusercontent.com/kubeflow/manifests/v1.9.1/common/kubeflow-namespace/base
+- common/kubeflow-namespace/base
 # NetworkPolicies
 # renovate: datasource=github-releases depName=kubeflow/manifests
-- https://raw.githubusercontent.com/kubeflow/manifests/v1.9.1/common/networkpolicies/base
+- common/networkpolicies/base
 # Kubeflow Roles
 # renovate: datasource=github-releases depName=kubeflow/manifests
-- https://raw.githubusercontent.com/kubeflow/manifests/v1.9.1/common/kubeflow-roles/base
+- common/kubeflow-roles/base
 # Kubeflow Istio Resources
 # renovate: datasource=github-releases depName=kubeflow/manifests
-- https://raw.githubusercontent.com/kubeflow/manifests/v1.9.1/common/istio-1-22/kubeflow-istio-resources/base
+- common/istio-1-22/kubeflow-istio-resources/base
 
 
 # Kubeflow Pipelines
 # renovate: datasource=github-releases depName=kubeflow/manifests
-- https://raw.githubusercontent.com/kubeflow/manifests/v1.9.1/apps/pipeline/upstream/env/cert-manager/platform-agnostic-multi-user
+- apps/pipeline/upstream/env/cert-manager/platform-agnostic-multi-user
 # Katib
 # renovate: datasource=github-releases depName=kubeflow/manifests
-- https://raw.githubusercontent.com/kubeflow/manifests/v1.9.1/apps/katib/upstream/installs/katib-with-kubeflow
+- apps/katib/upstream/installs/katib-with-kubeflow
 # Central Dashboard
 # renovate: datasource=github-releases depName=kubeflow/manifests
-- https://raw.githubusercontent.com/kubeflow/manifests/v1.9.1/apps/centraldashboard/overlays/oauth2-proxy
+- apps/centraldashboard/overlays/oauth2-proxy
 # Admission Webhook
 # renovate: datasource=github-releases depName=kubeflow/manifests
-- https://raw.githubusercontent.com/kubeflow/manifests/v1.9.1/apps/admission-webhook/upstream/overlays/cert-manager
+- apps/admission-webhook/upstream/overlays/cert-manager
 # Jupyter Web App
 # renovate: datasource=github-releases depName=kubeflow/manifests
-- https://raw.githubusercontent.com/kubeflow/manifests/v1.9.1/apps/jupyter/jupyter-web-app/upstream/overlays/istio
+- apps/jupyter/jupyter-web-app/upstream/overlays/istio
 # Notebook Controller
 # renovate: datasource=github-releases depName=kubeflow/manifests
-- https://raw.githubusercontent.com/kubeflow/manifests/v1.9.1/apps/jupyter/notebook-controller/upstream/overlays/kubeflow
+- apps/jupyter/notebook-controller/upstream/overlays/kubeflow
 # Profiles + KFAM
 # renovate: datasource=github-releases depName=kubeflow/manifests
-- https://raw.githubusercontent.com/kubeflow/manifests/v1.9.1/apps/profiles/upstream/overlays/kubeflow
+- apps/profiles/upstream/overlays/kubeflow
 # PVC Viewer
 # renovate: datasource=github-releases depName=kubeflow/manifests
-- https://raw.githubusercontent.com/kubeflow/manifests/v1.9.1/apps/pvcviewer-controller/upstream/base
+- apps/pvcviewer-controller/upstream/base
 # Volumes Web App
 # renovate: datasource=github-releases depName=kubeflow/manifests
-- https://raw.githubusercontent.com/kubeflow/manifests/v1.9.1/apps/volumes-web-app/upstream/overlays/istio
+- apps/volumes-web-app/upstream/overlays/istio
 # Tensorboards Controller
 # renovate: datasource=github-releases depName=kubeflow/manifests
-- https://raw.githubusercontent.com/kubeflow/manifests/v1.9.1/apps/tensorboard/tensorboard-controller/upstream/overlays/kubeflow
+- apps/tensorboard/tensorboard-controller/upstream/overlays/kubeflow
 # Tensorboard Web App
 # renovate: datasource=github-releases depName=kubeflow/manifests
-- https://raw.githubusercontent.com/kubeflow/manifests/v1.9.1/apps/tensorboard/tensorboards-web-app/upstream/overlays/istio
+- apps/tensorboard/tensorboards-web-app/upstream/overlays/istio
 # Training Operator
 # renovate: datasource=github-releases depName=kubeflow/manifests
-- https://raw.githubusercontent.com/kubeflow/manifests/v1.9.1/apps/training-operator/upstream/overlays/kubeflow
+- apps/training-operator/upstream/overlays/kubeflow
 # User namespace
 # renovate: datasource=github-releases depName=kubeflow/manifests
-- https://raw.githubusercontent.com/kubeflow/manifests/v1.9.1/common/user-namespace/base
+- common/user-namespace/base
 
 # KServe
 # renovate: datasource=github-releases depName=kubeflow/manifests
-- https://raw.githubusercontent.com/kubeflow/manifests/v1.9.1/contrib/kserve/kserve
+- contrib/kserve/kserve
 # renovate: datasource=github-releases depName=kubeflow/manifests
-- https://raw.githubusercontent.com/kubeflow/manifests/v1.9.1/contrib/kserve/models-web-app/overlays/kubeflow
+- contrib/kserve/models-web-app/overlays/kubeflow
 
 # Ray and Seldon resources (commented out by default)
 # Ray does not support Istio yet and integration is in alpha state.
 # Here is the documentation for Ray: https://docs.ray.io/en/latest/
 # Here is the internal documentation for Ray: - ../contrib/ray/README.md
 # renovate: datasource=github-releases depName=kubeflow/manifests
-- https://raw.githubusercontent.com/kubeflow/manifests/v1.9.1/contrib/ray/kuberay-operator/overlays/kubeflow
+- contrib/ray/kuberay-operator/overlays/kubeflow
 #
 # Seldon integration notes: Seldon may have specific requirements and limitations.
 # Documentation for Seldon: https://docs.seldon.io/projects/seldon-core/en/latest/
 # Here is the internal documentation for Seldon: - ../contrib/seldon/README.md
 # renovate: datasource=github-releases depName=kubeflow/manifests
-- https://raw.githubusercontent.com/kubeflow/manifests/v1.9.1/contrib/seldon/seldon-core-operator/overlays/application
+- contrib/seldon/seldon-core-operator/overlays/application
 
 components:
 # Pod Security Standards
 # https://kubernetes.io/docs/concepts/security/pod-security-standards/
 # renovate: datasource=github-releases depName=kubeflow/manifests
-- https://raw.githubusercontent.com/kubeflow/manifests/v1.9.1/contrib/security/PSS/static/baseline
+- contrib/security/PSS/static/baseline
