--- a/kubernetes/apps/kubeflow/kustomization.yaml
+++ b/kubernetes/apps/kubeflow/kustomization.yaml
@@ -4,5 +4,39 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  # renovate: datasource=github-releases depName=kubeflow/manifests
-  - https://github.com/kubeflow/manifests.git/examples/kustomization.yaml?ref=v1.9.1
+  # cert-manager
+  - https://github.com/kubeflow/manifests.git//common/cert-manager/kubeflow-issuer/base?ref=v1.10.0-rc2
+  # istio
+  - https://github.com/kubeflow/manifests.git//common/istio-1-24/istio-crds/base?ref=v1.10.0-rc2
+  - https://github.com/kubeflow/manifests.git//common/istio-1-24/istio-namespace/base?ref=v1.10.0-rc2
+  - https://github.com/kubeflow/manifests.git//common/istio-1-24/istio-install/overlays/oauth2-proxy?ref=v1.10.0-rc2
+  # oauth2-proxy
+  - https://github.com/kubeflow/manifests.git//common/oauth2-proxy/overlays/m2m-dex-only?ref=v1.10.0-rc2
+  # dex
+  - https://github.com/kubeflow/manifests.git//common/dex/overlays/oauth2-proxy?ref=v1.10.0-rc2
+  # knative
+  - https://github.com/kubeflow/manifests.git//common/knative/knative-serving/overlays/gateways?ref=v1.10.0-rc2
+  - https://github.com/kubeflow/manifests.git//common/istio-1-24/cluster-local-gateway/base?ref=v1.10.0-rc2
+  - https://github.com/kubeflow/manifests.git//common/knative/knative-eventing/base?ref=v1.10.0-rc2
+  # kubeflow namespace
+  - https://github.com/kubeflow/manifests.git//common/kubeflow-namespace/base?ref=v1.10.0-rc2
+  # network policies
+  - https://github.com/kubeflow/manifests.git//common/networkpolicies/base?ref=v1.10.0-rc2
+  # roles
+  - https://github.com/kubeflow/manifests.git//common/kubeflow-roles/base?ref=v1.10.0-rc2
+  # kubeflow istio resources
+  - https://github.com/kubeflow/manifests.git//common/istio-1-24/kubeflow-istio-resources/base?ref=v1.10.0-rc2
+  # kubeflow pipelines
+  - https://github.com/kubeflow/manifests.git//apps/pipeline/upstream/env/cert-manager/platform-agnostic-multi-user?ref=v1.10.0-rc2
+  # kserve
+  - https://github.com/kubeflow/manifests.git//apps/kserve/kserve?ref=v1.10.0-rc2
+  - https://github.com/kubeflow/manifests.git//apps/kserve/models-web-app/overlays/kubeflow?ref=v1.10.0-rc2
+  # katib
+  - https://github.com/kubeflow/manifests.git//apps/katib/upstream/installs/katib-with-kubeflow?ref=v1.10.0-rc2
+  # central dashboard
+  - https://github.com/kubeflow/manifests.git//apps/centraldashboard/overlays/oauth2-proxy?ref=v1.10.0-rc2
+  # admission webhook
+  - https://github.com/kubeflow/manifests.git//apps/admission-webhook/upstream/overlays/cert-manager?ref=v1.10.0-rc2
+  # notebooks
+  - https://github.com/kubeflow/manifests.git//apps/jupyter/notebook-controller/upstream/overlays/kubeflow?ref=v1.10.0-rc2
+  - https://github.com/kubeflow/manifests.git//apps/jupyter/jupyter-web-app/upstream/overlays/istio?ref=v1.10.0-rc2
