--- a/kubernetes/apps/ml-system/prefect/workers/rbac.yaml
+++ b/kubernetes/apps/ml-system/prefect/workers/rbac.yaml
@@ -11,7 +11,7 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: prefect-worker-
+  name: prefect-worker
 subjects:
 - kind: ServiceAccount
   name: prefect-worker
