--- a/kubernetes/apps/kube-system/cilium/gateway/external.yaml
+++ b/kubernetes/apps/kube-system/cilium/gateway/external.yaml
@@ -19,17 +19,35 @@ spec:
     annotations:
       external-dns.alpha.kubernetes.io/hostname: *hostname
   listeners:
-    - name: http
+    - name: goyangi-cloud-http
       protocol: HTTP
       port: 80
       hostname: "*.goyangi.cloud"
       allowedRoutes:
         namespaces:
           from: All
-    - name: https
+    - name: goyangi-cloud-https
       protocol: HTTPS
       port: 443
       hostname: "*.goyangi.cloud"
+      allowedRoutes:
+        namespaces:
+          from: All
+      tls:
+        certificateRefs:
+          - kind: Secret
+            name: goyangi-cloud-tls
+    - name: solanyn-dev-http
+      protocol: HTTP
+      port: 80
+      hostname: "*.solanyn.dev"
+      allowedRoutes:
+        namespaces:
+          from: All
+    - name: solanyn-dev-https
+      protocol: HTTPS
+      port: 443
+      hostname: "*.solanyn.dev"
       allowedRoutes:
         namespaces:
           from: All
