--- a/kubernetes/apps/network/echo/app/helmrelease.yaml
+++ b/kubernetes/apps/network/echo/app/helmrelease.yaml
@@ -75,7 +75,7 @@ spec:
         parentRefs:
           - name: external
             namespace: kube-system
-            sectionName: sol-https
+            sectionName: https
         rules:
           - backendRefs:
               - name: *app
