--- a/kubernetes/apps/ml-system/prefect/workers/rbac.yaml
+++ b/kubernetes/apps/ml-system/prefect/workers/rbac.yaml
@@ -1,6 +1,6 @@
 ---
 apiVersion: rbac.authorization.k8s.io/v1
-kind: Role
+kind: ClusterRole
 metadata:
   name: prefect-worker
 rules:
@@ -8,14 +8,17 @@ rules:
   resources: ["jobs"]
   verbs: ["create", "get", "list", "watch", "update", "patch", "delete"]
 ---
+
 apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
+kind: ClusterRoleBinding
 metadata:
   name: prefect-worker
 subjects:
 - kind: ServiceAccount
   name: prefect-worker
+  namespace: ml-system
 roleRef:
-  kind: Role
+  kind: ClusterRole
   name: prefect-worker
   apiGroup: rbac.authorization.k8s.io
+
