--- a/kubernetes/apps/ml-system/prefect/workers/helmrelease.yaml
+++ b/kubernetes/apps/ml-system/prefect/workers/helmrelease.yaml
@@ -23,6 +23,9 @@ spec:
       retries: 3
   values:
     namespaceOverride: ml-system
+    commonLabels:
+      # NOTE: needed to avoid admission policy failure
+      app.kubernetes.io/created-by: prefect-worker
     worker:
       image:
         repository: prefecthq/prefect
