--- a/kubernetes/apps/network/echo/app/helmrelease.yaml
+++ b/kubernetes/apps/network/echo/app/helmrelease.yaml
@@ -71,7 +71,9 @@ spec:
           - port: http
     route:
       app:
-        hostnames: ["echo.solanyn.dev"]
+        hostnames:
+          - "{{ .Release.Name }}.goyangi.cloud"
+          - "echo.solanyn.dev"
         parentRefs:
           - name: external
             namespace: kube-system
