--- a/kubernetes/apps/default/reactive-resume/app/externalsecret.yaml
+++ b/kubernetes/apps/default/reactive-resume/app/externalsecret.yaml
@@ -22,7 +22,7 @@ spec:
         INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
         MAIL_FROM: "{{ .SMTP_USERNAME }}"
         SMTP_URL: "smtp://{{ .SMTP_USERNAME }}:{{ .SMTP_PASSWORD }}@{{ .SMTP_SERVER }}:587"
-        STORAGE_ENDPOINT: https://25450dc0f239d4e727e3488cfb31b5c4.r2.cloudflarestorage.com
+        STORAGE_ENDPOINT: 25450dc0f239d4e727e3488cfb31b5c4.r2.cloudflarestorage.com
         STORAGE_PORT: "443"
         STORAGE_BUCKET: assets
         STORAGE_ACCESS_KEY: "{{ .AWS_ACCESS_KEY_ID }}"
