--- a/.renovate/autoMerge.json5
+++ b/.renovate/autoMerge.json5
@@ -27,6 +27,15 @@
       "matchUpdateTypes": ["minor", "patch"],
       "matchDepNames": ["kube-prometheus-stack"],
       "ignoreTests": false
+    },
+    {
+       "description": "Auto-merge GitHub Releases",
+       "matchDatasources": ["github-releases"],
+       "automerge": true,
+       "automergeType": "pr",
+       "matchUpdateTypes": ["minor", "patch"],
+       "matchPackageNames": ["/gateway-api/", "/prometheus-operator/"],
+       "ignoreTests": false
     }
   ]
 }
