--- a/kubernetes/apps/system-upgrade/kustomization.yaml
+++ b/kubernetes/apps/system-upgrade/kustomization.yaml
@@ -4,12 +4,12 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: system-upgrade
 components:
-  - ../../components/repos/app-template
   - ../../components/common
+  - ../../components/repos/app-template
 resources:
   - ./system-upgrade-controller/ks.yaml
 configMapGenerator:
-  - name: system-upgrade-plan-versions
+  - name: versions
     env: ./versions.env
-generatorOptions:
-  disableNameSuffixHash: true
+configurations:
+  - ./kustomizeconfig.yaml
