--- a/kubernetes/apps/network/cloudflare-tunnel/app/externalsecret.yaml
+++ b/kubernetes/apps/network/cloudflare-tunnel/app/externalsecret.yaml
@@ -11,12 +11,8 @@ spec:
     name: cloudflare-tunnel-secret
     template:
       data:
-        credentials.json: |
-          {
-            "AccountTag": "{{ .CLOUDFLARE_ACCOUNT_TAG }}",
-            "TunnelSecret": "{{ .CLOUDFLARE_TUNNEL_SECRET }}",
-            "TunnelID": "{{ .CLOUDFLARE_TUNNEL_ID }}"
-          }
+        TUNNEL_TOKEN: |
+          {{ toJson (dict "a" .CLOUDFLARE_ACCOUNT_TAG "t" .CLOUDFLARE_TUNNEL_ID "s" .CLOUDFLARE_TUNNEL_SECRET) | b64enc }}
   dataFrom:
     - extract:
         key: cloudflare
