--- a/kubernetes/apps/kube-system/cilium/app/helm/values.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helm/values.yaml
@@ -21,7 +21,7 @@ cni:
   exclusive: false
 dashboards:
   enabled: true
-devices: enp+
+devices: eno+
 enableIPv4BIGTCP: true
 endpointRoutes:
   enabled: true
