--- a/kubernetes/apps/kube-system/metrics-server/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/metrics-server/app/helmrelease.yaml
@@ -1,34 +1,37 @@
 ---
- # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/source.toolkit.fluxcd.io/helmrepository_v1.json
- apiVersion: source.toolkit.fluxcd.io/v1
- kind: HelmRepository
- metadata:
-   name: metrics-server
-   namespace: kube-system # Required for Renovate lookups
- spec:
-   interval: 12h
-   url: https://kubernetes-sigs.github.io/metrics-server
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/source.toolkit.fluxcd.io/ocirepository_v1beta2.json
+apiVersion: source.toolkit.fluxcd.io/v1beta2
+kind: OCIRepository
+metadata:
+  name: metrics-server
+spec:
+  interval: 1h
+  layerSelector:
+    mediaType: application/vnd.cncf.helm.chart.content.v1.tar+gzip
+    operation: copy
+  ref:
+    tag: 3.12.2
+  url: oci://ghcr.io/onedr0p/charts-mirror/metrics-server
+  verify:
+    provider: cosign
 ---
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: metrics-server
 spec:
   interval: 1h
-  chart:
-    spec:
-      chart: metrics-server
-      version: 3.12.2
-      sourceRef:
-        kind: HelmRepository
-        name: metrics-server
-        namespace: kube-system
+  chartRef:
+    kind: OCIRepository
+    name: metrics-server
   install:
     remediation:
       retries: 3
   upgrade:
     cleanupOnFail: true
     remediation:
+      strategy: rollback
       retries: 3
   values:
     args:
@@ -37,9 +40,6 @@ spec:
       - --kubelet-use-node-status-port
       - --metric-resolution=10s
       - --kubelet-request-timeout=2s
-    resources:
-      requests:
-        cpu: 10m
     metrics:
       enabled: true
     serviceMonitor:
