--- a/kubernetes/apps/network/cloudflare-dns/app/helmrelease.yaml
+++ b/kubernetes/apps/network/cloudflare-dns/app/helmrelease.yaml
@@ -1,13 +1,19 @@
 ---
-# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/source.toolkit.fluxcd.io/helmrepository_v1.json
-apiVersion: source.toolkit.fluxcd.io/v1
-kind: HelmRepository
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/source.toolkit.fluxcd.io/ocirepository_v1beta2.json
+apiVersion: source.toolkit.fluxcd.io/v1beta2
+kind: OCIRepository
 metadata:
   name: cloudflare-dns
-  namespace: network # Required for Renovate lookups
 spec:
-  interval: 12h
-  url: https://kubernetes-sigs.github.io/external-dns
+  interval: 1h
+  layerSelector:
+    mediaType: application/vnd.cncf.helm.chart.content.v1.tar+gzip
+    operation: copy
+  ref:
+    tag: 1.15.2
+  url: oci://ghcr.io/onedr0p/charts-mirror/external-dns
+  verify:
+    provider: cosign
 ---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
@@ -16,29 +22,22 @@ metadata:
   name: &app cloudflare-dns
 spec:
   interval: 1h
-  chart:
-    spec:
-      chart: external-dns
-      version: 1.15.2
-      sourceRef:
-        kind: HelmRepository
-        name: cloudflare-dns
-        namespace: network
+  chartRef:
+    kind: OCIRepository
+    name: cloudflare-dns
   install:
-    crds: CreateReplace
     remediation:
       retries: 3
   upgrade:
     cleanupOnFail: true
-    crds: CreateReplace
     remediation:
       strategy: rollback
       retries: 3
   values:
     fullnameOverride: *app
     image: # TODO: https://github.com/kubernetes-sigs/external-dns/pull/4943
-       repository: ghcr.io/buroa/external-dns
-       tag: 631b84da
+      repository: ghcr.io/buroa/external-dns
+      tag: 631b84da
     provider: cloudflare
     env:
       - name: &name CF_API_TOKEN
