--- a/kubernetes/apps/observability/silence-operator/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/silence-operator/app/helmrelease.yaml
@@ -1,19 +1,30 @@
+
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/source.toolkit.fluxcd.io/ocirepository_v1beta2.json
+apiVersion: source.toolkit.fluxcd.io/v1beta2
+kind: OCIRepository
+metadata:
+  name: silence-operator
+spec:
+  interval: 1h
+  layerSelector:
+    mediaType: application/vnd.cncf.helm.chart.content.v1.tar+gzip
+    operation: copy
+  ref:
+    tag: 0.0.7
+  url: oci://ghcr.io/onedr0p/charts-mirror/silence-operator
+  verify:
+    provider: cosign
 ---
-# yaml-language-server: $schema=https://kubernetes-schemas.solanyn.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: silence-operator
 spec:
   interval: 1h
-  chart:
-    spec:
-      chart: silence-operator
-      version: 0.0.7
-      sourceRef:
-        kind: HelmRepository
-        name: wiremind
-        namespace: observability
+  chartRef:
+    kind: OCIRepository
+    name: silence-operator
   install:
     remediation:
       retries: 3
@@ -46,6 +57,19 @@ spec:
               isRegex: false
             - name: instance
               value: 192.168.1.10:9283
+              isRegex: false
+      - apiVersion: monitoring.giantswarm.io/v1alpha1
+        kind: Silence
+        metadata:
+          name: smart-device-high-temperature
+          namespace: observability
+        spec:
+          matchers:
+            - name: alertname
+              value: SmartDeviceHighTemperature
+              isRegex: false
+            - name: device
+              value: nvme0
               isRegex: false
       - apiVersion: monitoring.giantswarm.io/v1alpha1
         kind: Silence
