--- a/kubernetes/apps/observability/silence-operator/crds/helmrelease.yaml
+++ b/kubernetes/apps/observability/silence-operator/crds/helmrelease.yaml
@@ -1,29 +1,30 @@
 ---
- # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/source.toolkit.fluxcd.io/helmrepository_v1.json
- apiVersion: source.toolkit.fluxcd.io/v1
- kind: HelmRepository
- metadata:
-   name: wiremind
-   namespace: observability # Required for Renovate lookups
- spec:
-   interval: 12h
-   url: https://wiremind.github.io/wiremind-helm-charts/
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/source.toolkit.fluxcd.io/ocirepository_v1beta2.json
+apiVersion: source.toolkit.fluxcd.io/v1beta2
+kind: OCIRepository
+metadata:
+  name: silence-operator-crds
+spec:
+  interval: 1h
+  layerSelector:
+    mediaType: application/vnd.cncf.helm.chart.content.v1.tar+gzip
+    operation: copy
+  ref:
+    tag: 0.0.2
+  url: oci://ghcr.io/onedr0p/charts-mirror/silence-operator-crds
+  verify:
+    provider: cosign
 ---
-#yaml-language-server: $schema=https://kubernetes-schemas.solanyn.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: silence-operator-crds
 spec:
   interval: 1h
-  chart:
-    spec:
-      chart: silence-operator-crds
-      version: 0.0.2
-      sourceRef:
-        kind: HelmRepository
-        name: wiremind
-        namespace: observability
+  chartRef:
+    kind: OCIRepository
+    name: silence-operator-crds
   install:
     remediation:
       retries: 3
