--- a/kubernetes/apps/kube-system/cilium/gateway/external.yaml
+++ b/kubernetes/apps/kube-system/cilium/gateway/external.yaml
@@ -6,8 +6,6 @@ metadata:
   name: external
   annotations:
     external-dns.alpha.kubernetes.io/target: &hostname external.goyangi.cloud
-  labels:
-    gateway: external
 spec:
   gatewayClassName: cilium
   addresses:
@@ -25,29 +23,11 @@ spec:
       hostname: "*.goyangi.cloud"
       allowedRoutes:
         namespaces:
-          from: All
+          from: Same
     - name: https
       protocol: HTTPS
       port: 443
       hostname: "*.goyangi.cloud"
-      allowedRoutes:
-        namespaces:
-          from: All
-      tls:
-        certificateRefs:
-          - kind: Secret
-            name: goyangi-cloud-tls
-    - name: sol-http
-      protocol: HTTP
-      port: 80
-      hostname: "*.solanyn.dev"
-      allowedRoutes:
-        namespaces:
-          from: All
-    - name: sol-https
-      protocol: HTTPS
-      port: 443
-      hostname: "*.solanyn.dev"
       allowedRoutes:
         namespaces:
           from: All
