--- a/kubernetes/apps/kube-system/cilium/gateway/internal.yaml
+++ b/kubernetes/apps/kube-system/cilium/gateway/internal.yaml
@@ -6,8 +6,6 @@ metadata:
   name: internal
   annotations:
     external-dns.alpha.kubernetes.io/target: &hostname internal.goyangi.cloud
-  labels:
-    gateway: internal
 spec:
   gatewayClassName: cilium
   addresses:
@@ -25,7 +23,7 @@ spec:
       hostname: "*.goyangi.cloud"
       allowedRoutes:
         namespaces:
-          from: All
+          from: Same
     - name: https
       protocol: HTTPS
       port: 443
