--- a/kubernetes/apps/kubeflow/istio/ingress-gateway/helmrelease.yaml
+++ b/kubernetes/apps/kubeflow/istio/ingress-gateway/helmrelease.yaml
@@ -4,7 +4,7 @@ apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
   name: istio
-  namespace: istio-system
+  namespace: kubeflow
 spec:
   interval: 12h
   url: https://istio-release.storage.googleapis.com/charts
