--- a/kubernetes/apps/kubeflow/knative/ks.yaml
+++ b/kubernetes/apps/kubeflow/knative/ks.yaml
@@ -3,7 +3,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app knative-operator
+  name: &app knative
   namespace: &namespace kubeflow
 spec:
   commonMetadata:
