--- a/kubernetes/apps/kubeflow/kserve/app/helmrelease.yaml
+++ b/kubernetes/apps/kubeflow/kserve/app/helmrelease.yaml
@@ -1,19 +1,13 @@
 ---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/source.toolkit.fluxcd.io/ocirepository_v1beta2.json
 apiVersion: source.toolkit.fluxcd.io/v1beta2
-kind: OCIRepository
+kind: HelmRepository
 metadata:
   name: kserve
 spec:
   interval: 1h
-  layerSelector:
-    mediaType: application/vnd.cncf.helm.chart.content.v1.tar+gzip
-    operation: copy
-  ref:
-    tag: 0.12.1
+  type: oci
   url: oci://ghcr.io/kserve/charts/kserve
-  verify:
-    provider: cosign
 ---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
@@ -22,9 +16,14 @@ metadata:
   name: kserve
 spec:
   interval: 1h
-  chartRef:
-    kind: OCIRepository
-    name: kserve
+  chart:
+    spec:
+      chart: kserve
+      version: v0.12.1
+      sourceRef:
+        kind: HelmRepository
+        name: kserve
+        namespace: kubeflow
   install:
     remediation:
       retries: 3
