--- a/kubernetes/apps/kubeflow/istio/ingress-gateway/helmrelease.yaml
+++ b/kubernetes/apps/kubeflow/istio/ingress-gateway/helmrelease.yaml
@@ -13,7 +13,7 @@ spec:
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: istio-ingressgateway
+  name: istio-ingress-gateway
 spec:
   interval: 1h
   chart:
