--- a/kubernetes/apps/kubeflow/kserve/app/helmrelease.yaml
+++ b/kubernetes/apps/kubeflow/kserve/app/helmrelease.yaml
@@ -19,7 +19,7 @@ spec:
   chart:
     spec:
       chart: kserve
-      version: v0.12.1
+      version: 0.12.1
       sourceRef:
         kind: HelmRepository
         name: kserve
