--- a/kubernetes/apps/kubeflow/kserve/crds/helmrelease.yaml
+++ b/kubernetes/apps/kubeflow/kserve/crds/helmrelease.yaml
@@ -20,7 +20,7 @@ spec:
   chart:
     spec:
       chart: kserve-crd
-      version: v0.12.1
+      version: 0.12.1
       sourceRef:
         kind: HelmRepository
         name: kserve-crd
