--- a/kubernetes/apps/kubeflow/kserve/crds/helmrelease.yaml
+++ b/kubernetes/apps/kubeflow/kserve/crds/helmrelease.yaml
@@ -1,14 +1,3 @@
-
----
-# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/source.toolkit.fluxcd.io/ocirepository_v1beta2.json
-apiVersion: source.toolkit.fluxcd.io/v1beta2
-kind: HelmRepository
-metadata:
-  name: kserve-crd
-spec:
-  interval: 1h
-  type: oci
-  url: oci://ghcr.io/kserve/charts/
 ---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
@@ -23,7 +12,7 @@ spec:
       version: 0.12.1
       sourceRef:
         kind: HelmRepository
-        name: kserve-crd
+        name: kserve
         namespace: kubeflow
   install:
     remediation:
