--- a/kubernetes/apps/argocd/argocd/app/kustomization.yaml
+++ b/kubernetes/apps/argocd/argocd/app/kustomization.yaml
@@ -1,6 +1,23 @@
 ---
+apiVersion: source.toolkit.fluxcd.io/v1
+kind: GitRepository
+metadata:
+  name: deploykf-argocd
+  namespace: argocd
+spec:
+  interval: 1m
+  ref:
+    branch: main
+  url: https://github.com/deployKF/deployKF.git
+---
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-resources:
-  - github.com/deployKF/deployKF/argocd-plugin/argocd-install/?ref=main
+spec:
+  interval: 1m0s
+  path: ./argocd-plugin/argocd-install
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: deploykf-argocd
+    namespace: argocd
