--- a/kubernetes/apps/argocd/argocd/app/kustomization.yaml
+++ b/kubernetes/apps/argocd/argocd/app/kustomization.yaml
@@ -1,18 +1,9 @@
 ---
-apiVersion: source.toolkit.fluxcd.io/v1
-kind: GitRepository
-metadata:
-  name: deploykf-argocd
-  namespace: argocd
-spec:
-  interval: 1m
-  ref:
-    branch: main
-  url: https://github.com/deployKF/deployKF.git
----
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+resources:
+  - ./gitrepository.yaml
 spec:
   interval: 1m0s
   path: ./argocd-plugin/argocd-install
